--- a/stm32cube/Compensation_Coil.ioc
+++ b/stm32cube/Compensation_Coil.ioc
@@ -52,29 +52,26 @@ Mcu.IP7=USART3
 Mcu.IPNb=8
 Mcu.Name=STM32H743ZITx
 Mcu.Package=LQFP144
-Mcu.Pin0=PE4
-Mcu.Pin1=PE5
-Mcu.Pin10=PC5
-Mcu.Pin11=PB0
-Mcu.Pin12=PB13
-Mcu.Pin13=PB14
-Mcu.Pin14=PD8
-Mcu.Pin15=PD9
-Mcu.Pin16=PG11
-Mcu.Pin17=PG13
-Mcu.Pin18=PE1
-Mcu.Pin19=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin2=PC13
-Mcu.Pin20=VP_LWIP_VS_Enabled
-Mcu.Pin21=VP_SYS_VS_tim6
-Mcu.Pin3=PF1
-Mcu.Pin4=PH0-OSC_IN (PH0)
-Mcu.Pin5=PC1
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA7
-Mcu.Pin9=PC4
-Mcu.PinsNb=22
+Mcu.Pin0=PC13
+Mcu.Pin1=PH0-OSC_IN (PH0)
+Mcu.Pin10=PB14
+Mcu.Pin11=PD8
+Mcu.Pin12=PD9
+Mcu.Pin13=PG11
+Mcu.Pin14=PG13
+Mcu.Pin15=PE1
+Mcu.Pin16=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin17=VP_LWIP_VS_Enabled
+Mcu.Pin18=VP_SYS_VS_tim6
+Mcu.Pin2=PC1
+Mcu.Pin3=PA1
+Mcu.Pin4=PA2
+Mcu.Pin5=PA7
+Mcu.Pin6=PC4
+Mcu.Pin7=PC5
+Mcu.Pin8=PB0
+Mcu.Pin9=PB13
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743ZITx
@@ -163,21 +160,6 @@ PE1.GPIO_Label=LD2 [Yellow Led]
 PE1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE1.Locked=true
 PE1.Signal=GPIO_Output
-PE4.GPIOParameters=GPIO_Speed,GPIO_Label
-PE4.GPIO_Label=CS1
-PE4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PE4.Locked=true
-PE4.Signal=GPIO_Output
-PE5.GPIOParameters=GPIO_Speed,GPIO_Label
-PE5.GPIO_Label=CS2
-PE5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PE5.Locked=true
-PE5.Signal=GPIO_Output
-PF1.GPIOParameters=GPIO_Speed,GPIO_Label
-PF1.GPIO_Label=CS3
-PF1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PF1.Locked=true
-PF1.Signal=GPIO_Output
 PG11.GPIOParameters=GPIO_Speed
 PG11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PG11.Locked=true
@@ -222,7 +204,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI4_Init-SPI4-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_LWIP_Init-LWIP-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_LWIP_Init-LWIP-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=16125000
 RCC.AHB12Freq_Value=200000000
 RCC.AHB4Freq_Value=200000000
