--- a/stm32cube/Compensation_Coil.ioc
+++ b/stm32cube/Compensation_Coil.ioc
@@ -28,6 +28,10 @@ File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 LWIP.BSP.number=1
+LWIP.IPParameters=LWIP_DHCP,IP_ADDRESS,NETMASK_ADDRESS
+LWIP.IP_ADDRESS=192.168.003.111
+LWIP.LWIP_DHCP=0
+LWIP.NETMASK_ADDRESS=255.255.255.000
 LWIP.Version=v2.1.2_Cube
 LWIP0.BSP.STBoard=false
 LWIP0.BSP.api=BSP_COMPONENT_DRIVER
@@ -47,31 +51,38 @@ Mcu.IP2=FREERTOS
 Mcu.IP3=LWIP
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
-Mcu.IP6=SYS
-Mcu.IP7=USART3
-Mcu.IPNb=8
+Mcu.IP6=SPI1
+Mcu.IP7=SYS
+Mcu.IP8=USART3
+Mcu.IPNb=9
 Mcu.Name=STM32H743ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PH0-OSC_IN (PH0)
-Mcu.Pin10=PB14
-Mcu.Pin11=PD8
-Mcu.Pin12=PD9
-Mcu.Pin13=PG11
-Mcu.Pin14=PG13
-Mcu.Pin15=PE1
-Mcu.Pin16=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin17=VP_LWIP_VS_Enabled
-Mcu.Pin18=VP_SYS_VS_tim6
+Mcu.Pin10=PC5
+Mcu.Pin11=PB0
+Mcu.Pin12=PB12
+Mcu.Pin13=PB13
+Mcu.Pin14=PB14
+Mcu.Pin15=PD8
+Mcu.Pin16=PD9
+Mcu.Pin17=PD14
+Mcu.Pin18=PG11
+Mcu.Pin19=PG13
 Mcu.Pin2=PC1
+Mcu.Pin20=PB5
+Mcu.Pin21=PE1
+Mcu.Pin22=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin23=VP_LWIP_VS_Enabled
+Mcu.Pin24=VP_SYS_VS_tim6
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
-Mcu.Pin5=PA7
-Mcu.Pin6=PC4
-Mcu.Pin7=PC5
-Mcu.Pin8=PB0
-Mcu.Pin9=PB13
-Mcu.PinsNb=19
+Mcu.Pin5=PA4
+Mcu.Pin6=PA5
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PC4
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743ZITx
@@ -106,6 +117,19 @@ PA2.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA2.Locked=true
 PA2.Mode=RMII
 PA2.Signal=ETH_MDIO
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=SYNC
+PA4.Mode=NSS_Signal_Hard_Output
+PA4.Signal=SPI1_NSS
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=DAC_SCK
+PA5.Locked=true
+PA5.Mode=TX_Only_Simplex_Unidirect_Master
+PA5.Signal=SPI1_SCK
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=LDAC
+PA6.Locked=true
+PA6.Signal=GPIO_Output
 PA7.GPIOParameters=GPIO_Speed
 PA7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA7.Locked=true
@@ -116,6 +140,10 @@ PB0.GPIO_Label=LD1 [Green Led]
 PB0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB0.Locked=true
 PB0.Signal=GPIO_Output
+PB12.GPIOParameters=GPIO_Label
+PB12.GPIO_Label=ENABLE
+PB12.Locked=true
+PB12.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_Speed
 PB13.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB13.Locked=true
@@ -126,6 +154,11 @@ PB14.GPIO_Label=LD3 [Red Led]
 PB14.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB14.Locked=true
 PB14.Signal=GPIO_Output
+PB5.GPIOParameters=GPIO_Label
+PB5.GPIO_Label=DAC_MOSI
+PB5.Locked=true
+PB5.Mode=TX_Only_Simplex_Unidirect_Master
+PB5.Signal=SPI1_MOSI
 PC1.GPIOParameters=GPIO_Speed
 PC1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC1.Locked=true
@@ -143,6 +176,10 @@ PC5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC5.Locked=true
 PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
+PD14.GPIOParameters=GPIO_Label
+PD14.GPIO_Label=RSTSEL
+PD14.Locked=true
+PD14.Signal=GPIO_Output
 PD8.GPIOParameters=GPIO_Speed,GPIO_Label
 PD8.GPIO_Label=STLINK_RX
 PD8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
@@ -206,83 +243,88 @@ ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_LWIP_Init-LWIP-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=16125000
-RCC.AHB12Freq_Value=200000000
-RCC.AHB4Freq_Value=200000000
-RCC.APB1Freq_Value=100000000
-RCC.APB2Freq_Value=100000000
-RCC.APB3Freq_Value=100000000
-RCC.APB4Freq_Value=100000000
-RCC.AXIClockFreq_Value=200000000
+RCC.AHB12Freq_Value=75000000
+RCC.AHB4Freq_Value=75000000
+RCC.APB1Freq_Value=37500000
+RCC.APB2Freq_Value=75000000
+RCC.APB3Freq_Value=75000000
+RCC.APB4Freq_Value=75000000
+RCC.AXIClockFreq_Value=75000000
 RCC.CECFreq_Value=32000
 RCC.CKPERFreq_Value=64000000
-RCC.CortexFreq_Value=400000000
-RCC.CpuClockFreq_Value=400000000
-RCC.D1CPREFreq_Value=400000000
-RCC.D1PPRE=RCC_APB3_DIV2
+RCC.CortexFreq_Value=75000000
+RCC.CpuClockFreq_Value=75000000
+RCC.D1CPREFreq_Value=75000000
 RCC.D2PPRE1=RCC_APB1_DIV2
-RCC.D2PPRE2=RCC_APB2_DIV2
-RCC.D3PPRE=RCC_APB4_DIV2
-RCC.DFSDMACLkFreq_Value=400000000
-RCC.DFSDMFreq_Value=100000000
-RCC.DIVM1=4
-RCC.DIVN1=400
-RCC.DIVP1Freq_Value=400000000
+RCC.DFSDMACLkFreq_Value=75000000
+RCC.DFSDMFreq_Value=75000000
+RCC.DIVM1=1
+RCC.DIVN1=18
+RCC.DIVP1Freq_Value=75000000
 RCC.DIVP2Freq_Value=16125000
 RCC.DIVP3Freq_Value=16125000
-RCC.DIVQ1Freq_Value=400000000
+RCC.DIVQ1Freq_Value=75000000
 RCC.DIVQ2Freq_Value=16125000
 RCC.DIVQ3Freq_Value=16125000
-RCC.DIVR1Freq_Value=400000000
+RCC.DIVR1Freq_Value=75000000
 RCC.DIVR2Freq_Value=16125000
 RCC.DIVR3Freq_Value=16125000
-RCC.FDCANFreq_Value=400000000
-RCC.FMCFreq_Value=200000000
+RCC.FDCANFreq_Value=75000000
+RCC.FMCFreq_Value=75000000
 RCC.FamilyName=M
-RCC.HCLK3ClockFreq_Value=200000000
-RCC.HCLKFreq_Value=200000000
-RCC.HPRE=RCC_HCLK_DIV2
-RCC.HRTIMFreq_Value=200000000
+RCC.HCLK3ClockFreq_Value=75000000
+RCC.HCLKFreq_Value=75000000
+RCC.HRTIMFreq_Value=75000000
 RCC.HSE_VALUE=8000000
-RCC.I2C123Freq_Value=100000000
-RCC.I2C4Freq_Value=100000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
-RCC.LPTIM1Freq_Value=100000000
-RCC.LPTIM2Freq_Value=100000000
-RCC.LPTIM345Freq_Value=100000000
-RCC.LPUART1Freq_Value=100000000
+RCC.I2C123Freq_Value=37500000
+RCC.I2C4Freq_Value=75000000
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D2PPRE1,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.LPTIM1Freq_Value=37500000
+RCC.LPTIM2Freq_Value=75000000
+RCC.LPTIM345Freq_Value=75000000
+RCC.LPUART1Freq_Value=75000000
 RCC.LTDCFreq_Value=16125000
 RCC.MCO1PinFreq_Value=64000000
-RCC.MCO2PinFreq_Value=400000000
+RCC.MCO2PinFreq_Value=75000000
+RCC.PLLFRACN=6144
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
-RCC.QSPIFreq_Value=200000000
+RCC.QSPIFreq_Value=75000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=400000000
-RCC.SAI23Freq_Value=400000000
-RCC.SAI4AFreq_Value=400000000
-RCC.SAI4BFreq_Value=400000000
-RCC.SDMMCFreq_Value=400000000
-RCC.SPDIFRXFreq_Value=400000000
-RCC.SPI123Freq_Value=400000000
-RCC.SPI45Freq_Value=100000000
-RCC.SPI6Freq_Value=100000000
-RCC.SWPMI1Freq_Value=100000000
-RCC.SYSCLKFreq_VALUE=400000000
+RCC.SAI1Freq_Value=75000000
+RCC.SAI23Freq_Value=75000000
+RCC.SAI4AFreq_Value=75000000
+RCC.SAI4BFreq_Value=75000000
+RCC.SDMMCFreq_Value=75000000
+RCC.SPDIFRXFreq_Value=75000000
+RCC.SPI123Freq_Value=75000000
+RCC.SPI45Freq_Value=75000000
+RCC.SPI6Freq_Value=75000000
+RCC.SWPMI1Freq_Value=37500000
+RCC.SYSCLKFreq_VALUE=75000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.Tim1OutputFreq_Value=200000000
-RCC.Tim2OutputFreq_Value=200000000
+RCC.Tim1OutputFreq_Value=75000000
+RCC.Tim2OutputFreq_Value=75000000
 RCC.TraceFreq_Value=64000000
-RCC.USART16Freq_Value=100000000
-RCC.USART234578Freq_Value=100000000
-RCC.USBFreq_Value=400000000
-RCC.VCO1OutputFreq_Value=800000000
+RCC.USART16Freq_Value=75000000
+RCC.USART234578Freq_Value=37500000
+RCC.USBFreq_Value=75000000
+RCC.VCO1OutputFreq_Value=150000000
 RCC.VCO2OutputFreq_Value=32250000
 RCC.VCO3OutputFreq_Value=32250000
-RCC.VCOInput1Freq_Value=2000000
+RCC.VCOInput1Freq_Value=8000000
 RCC.VCOInput2Freq_Value=250000
 RCC.VCOInput3Freq_Value=250000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI1.CalculateBaudRate=18.75 MBits/s
+SPI1.DataSize=SPI_DATASIZE_24BIT
+SPI1.Direction=SPI_DIRECTION_2LINES_TXONLY
+SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,VirtualNSS,DataSize
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualNSS=VM_NSSHARD
+SPI1.VirtualType=VM_MASTER
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
