setting some voltage on dac

--- a/stm32cube/Compensation_Coil.ioc
+++ b/stm32cube/Compensation_Coil.ioc
@@ -18,7 +18,7 @@ CORTEX_M7.Size-Cortex_Memory_Protection_Unit_Region0_Settings=MPU_REGION_SIZE_25
 CORTEX_M7.Size-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_REGION_SIZE_16KB
 CORTEX_M7.TypeExtField-Cortex_Memory_Protection_Unit_Region1_Settings=MPU_TEX_LEVEL1
 ETH.IPParameters=MediaInterface,MACAddr
-ETH.MACAddr=02\:00\:00\:00\:00\:00
+ETH.MACAddr=02\:00\:00\:00\:00\:01
 ETH.MediaInterface=HAL_ETH_RMII_MODE
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK,configUSE_NEWLIB_REENTRANT
@@ -317,12 +317,13 @@ RCC.VCOInput2Freq_Value=250000
 RCC.VCOInput3Freq_Value=250000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI1.CalculateBaudRate=18.75 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
+SPI1.CalculateBaudRate=292.968 KBits/s
 SPI1.DataSize=SPI_DATASIZE_24BIT
 SPI1.Direction=SPI_DIRECTION_2LINES_TXONLY
-SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,VirtualNSS,DataSize
+SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,VirtualNSS,DataSize,NSSPolarity
 SPI1.Mode=SPI_MODE_MASTER
+SPI1.NSSPolarity=SPI_NSS_POLARITY_LOW
 SPI1.VirtualNSS=VM_NSSHARD
 SPI1.VirtualType=VM_MASTER
 USART3.IPParameters=VirtualMode-Asynchronous
