--- a/stm32cube/Compensation_Coil.ioc
+++ b/stm32cube/Compensation_Coil.ioc
@@ -241,7 +241,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_LWIP_Init-LWIP-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_LWIP_Init-LWIP-false-HAL-false,5-MX_SPI1_Init-SPI1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.ADCFreq_Value=16125000
 RCC.AHB12Freq_Value=75000000
 RCC.AHB4Freq_Value=75000000
@@ -318,10 +318,11 @@ RCC.VCOInput3Freq_Value=250000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
+SPI1.CLKPhase=SPI_PHASE_2EDGE
 SPI1.CalculateBaudRate=292.968 KBits/s
 SPI1.DataSize=SPI_DATASIZE_24BIT
 SPI1.Direction=SPI_DIRECTION_2LINES_TXONLY
-SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,VirtualNSS,DataSize,NSSPolarity
+SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,VirtualNSS,DataSize,NSSPolarity,CLKPhase
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.NSSPolarity=SPI_NSS_POLARITY_LOW
 SPI1.VirtualNSS=VM_NSSHARD
