adding DIR1,2,3 signals to ioc

--- a/stm32cube/Compensation_Coil.ioc
+++ b/stm32cube/Compensation_Coil.ioc
@@ -61,20 +61,23 @@ Mcu.Pin0=PC13
 Mcu.Pin1=PH0-OSC_IN (PH0)
 Mcu.Pin10=PC5
 Mcu.Pin11=PB0
-Mcu.Pin12=PB12
-Mcu.Pin13=PB13
-Mcu.Pin14=PB14
-Mcu.Pin15=PD8
-Mcu.Pin16=PD9
-Mcu.Pin17=PD14
-Mcu.Pin18=PG11
-Mcu.Pin19=PG13
+Mcu.Pin12=PE7
+Mcu.Pin13=PB12
+Mcu.Pin14=PB13
+Mcu.Pin15=PB14
+Mcu.Pin16=PB15
+Mcu.Pin17=PD8
+Mcu.Pin18=PD9
+Mcu.Pin19=PD14
 Mcu.Pin2=PC1
-Mcu.Pin20=PB5
-Mcu.Pin21=PE1
-Mcu.Pin22=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin23=VP_LWIP_VS_Enabled
-Mcu.Pin24=VP_SYS_VS_tim6
+Mcu.Pin20=PG11
+Mcu.Pin21=PG13
+Mcu.Pin22=PB5
+Mcu.Pin23=PB8
+Mcu.Pin24=PE1
+Mcu.Pin25=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin26=VP_LWIP_VS_Enabled
+Mcu.Pin27=VP_SYS_VS_tim6
 Mcu.Pin3=PA1
 Mcu.Pin4=PA2
 Mcu.Pin5=PA4
@@ -82,7 +85,7 @@ Mcu.Pin6=PA5
 Mcu.Pin7=PA6
 Mcu.Pin8=PA7
 Mcu.Pin9=PC4
-Mcu.PinsNb=25
+Mcu.PinsNb=28
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743ZITx
@@ -154,11 +157,19 @@ PB14.GPIO_Label=LD3 [Red Led]
 PB14.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB14.Locked=true
 PB14.Signal=GPIO_Output
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=DIR1
+PB15.Locked=true
+PB15.Signal=GPIO_Output
 PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=DAC_MOSI
 PB5.Locked=true
 PB5.Mode=TX_Only_Simplex_Unidirect_Master
 PB5.Signal=SPI1_MOSI
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=DIR2
+PB8.Locked=true
+PB8.Signal=GPIO_Output
 PC1.GPIOParameters=GPIO_Speed
 PC1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PC1.Locked=true
@@ -197,6 +208,10 @@ PE1.GPIO_Label=LD2 [Yellow Led]
 PE1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE1.Locked=true
 PE1.Signal=GPIO_Output
+PE7.GPIOParameters=GPIO_Label
+PE7.GPIO_Label=DIR3
+PE7.Locked=true
+PE7.Signal=GPIO_Output
 PG11.GPIOParameters=GPIO_Speed
 PG11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PG11.Locked=true
