--- a/stm32cube/Compensation_Coil.ioc
+++ b/stm32cube/Compensation_Coil.ioc
@@ -57,35 +57,38 @@ Mcu.IP8=USART3
 Mcu.IPNb=9
 Mcu.Name=STM32H743ZITx
 Mcu.Package=LQFP144
-Mcu.Pin0=PC13
-Mcu.Pin1=PH0-OSC_IN (PH0)
-Mcu.Pin10=PC5
-Mcu.Pin11=PB0
-Mcu.Pin12=PE7
-Mcu.Pin13=PB12
-Mcu.Pin14=PB13
-Mcu.Pin15=PB14
-Mcu.Pin16=PB15
-Mcu.Pin17=PD8
-Mcu.Pin18=PD9
-Mcu.Pin19=PD14
-Mcu.Pin2=PC1
-Mcu.Pin20=PG11
-Mcu.Pin21=PG13
-Mcu.Pin22=PB5
-Mcu.Pin23=PB8
-Mcu.Pin24=PE1
-Mcu.Pin25=VP_FREERTOS_VS_CMSIS_V1
-Mcu.Pin26=VP_LWIP_VS_Enabled
-Mcu.Pin27=VP_SYS_VS_tim6
-Mcu.Pin3=PA1
-Mcu.Pin4=PA2
-Mcu.Pin5=PA4
-Mcu.Pin6=PA5
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PC4
-Mcu.PinsNb=28
+Mcu.Pin0=PE3
+Mcu.Pin1=PE6
+Mcu.Pin10=PA6
+Mcu.Pin11=PA7
+Mcu.Pin12=PC4
+Mcu.Pin13=PC5
+Mcu.Pin14=PB0
+Mcu.Pin15=PE7
+Mcu.Pin16=PB12
+Mcu.Pin17=PB13
+Mcu.Pin18=PB14
+Mcu.Pin19=PB15
+Mcu.Pin2=PC13
+Mcu.Pin20=PD8
+Mcu.Pin21=PD9
+Mcu.Pin22=PD14
+Mcu.Pin23=PG11
+Mcu.Pin24=PG13
+Mcu.Pin25=PB5
+Mcu.Pin26=PB8
+Mcu.Pin27=PE1
+Mcu.Pin28=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin29=VP_LWIP_VS_Enabled
+Mcu.Pin3=PF1
+Mcu.Pin30=VP_SYS_VS_tim6
+Mcu.Pin4=PH0-OSC_IN (PH0)
+Mcu.Pin5=PC1
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA4
+Mcu.Pin9=PA5
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743ZITx
@@ -208,10 +211,25 @@ PE1.GPIO_Label=LD2 [Yellow Led]
 PE1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE1.Locked=true
 PE1.Signal=GPIO_Output
+PE3.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE3.GPIO_Label=TTL1
+PE3.GPIO_PuPd=GPIO_PULLDOWN
+PE3.Locked=true
+PE3.Signal=GPIO_Input
+PE6.GPIOParameters=GPIO_PuPd,GPIO_Label
+PE6.GPIO_Label=TTL3
+PE6.GPIO_PuPd=GPIO_PULLDOWN
+PE6.Locked=true
+PE6.Signal=GPIO_Input
 PE7.GPIOParameters=GPIO_Label
 PE7.GPIO_Label=DIR3
 PE7.Locked=true
 PE7.Signal=GPIO_Output
+PF1.GPIOParameters=GPIO_PuPd,GPIO_Label
+PF1.GPIO_Label=TTL2
+PF1.GPIO_PuPd=GPIO_PULLDOWN
+PF1.Locked=true
+PF1.Signal=GPIO_Input
 PG11.GPIOParameters=GPIO_Speed
 PG11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PG11.Locked=true
